added h2 and javafx dependencies